# data_engineering

./: .gitignore
datasets/kaggle_stock_data/: README.md
datasets/kaggle_stock_data/rust/: Cargo.toml
datasets/kaggle_stock_data/rust/src/: main.rs
perf/csv_parsing/: Cargo.toml  README.md  gen_data.py
perf/csv_parsing/benches/: parse.rs  parse_baseline.rs
utils/: criterion_to_md.py
