[package]
name = "csv_parsing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
arrow2 = "0.12"
arrow2_convert = "0.2"
criterion = { version = "0.3", features = ["async_tokio"]}
csv = { version = "1.1" }
csv-async = { version = "^1.1" }
futures = { version = "0.3" }
glob = { version = "0.3" }
rayon = { version = "1.5" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt", "fs", "io-util"] }
tokio-util = { version = "0.6", features = ["compat"] }

[[bench]]
name = "parse_baseline"
harness = false

#[[bench]]
#name = "csv_to_arrow"
#harness = false